force-app/main/default/objects/Lead/fields/Attempted_Calls__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to count each time a new activity with type Log a Call is created on a Lead (CCRM-3091)</description>
    <label>Attempted Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>