force-app/main/default/objects/Lead/fields/Call_Logged__c.field-meta.xml
<CustomField>
    <fullName>Call_Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Logged</label>
    <type>Checkbox</type>
</CustomField>