force-app/main/default/objects/Lead/fields/Creates_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Creates_Opportunity__c</fullName>
    <label>Creates Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>