force-app/main/default/objects/Lead/fields/Current_PIMS__c.field-meta.xml
<CustomField>
    <fullName>Current_PIMS__c</fullName>
    <label>Current PIMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None - New Practice</fullName>
            </value>
            <value>
                <fullName>None - Existing Practice</fullName>
            </value>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>RoboVet</fullName>
            </value>
            <value>
                <fullName>eVetPractice</fullName>
            </value>
            <value>
                <fullName>ACESoft Business Manager</fullName>
            </value>
            <value>
                <fullName>AHMS</fullName>
            </value>
            <value>
                <fullName>Animal Intelligence</fullName>
            </value>
            <value>
                <fullName>Animana</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>AlisVet</fullName>
            </value>
            <value>
                <fullName>AltaPoint Veterinary Software</fullName>
            </value>
            <value>
                <fullName>Ardex</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>ATSystems</fullName>
            </value>
            <value>
                <fullName>AutoTrack</fullName>
            </value>
            <value>
                <fullName>Avimark</fullName>
            </value>
            <value>
                <fullName>Bastet Windows</fullName>
            </value>
            <value>
                <fullName>BeeFree</fullName>
            </value>
            <value>
                <fullName>Ciderhouse</fullName>
            </value>
            <value>
                <fullName>ClienTrax</fullName>
            </value>
            <value>
                <fullName>ClinicWare</fullName>
            </value>
            <value>
                <fullName>Complete Clinic Software</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Custom Built</fullName>
            </value>
            <value>
                <fullName>Customer Logic</fullName>
            </value>
            <value>
                <fullName>Dunlops - Vetsys</fullName>
            </value>
            <value>
                <fullName>DVMAX Practice</fullName>
            </value>
            <value>
                <fullName>EazyVetPro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>