force-app/main/default/objects/Lead/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Represents the ID of the record from the source system at the time of migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Represents the ID of the record from the source system at the time of migration.</inlineHelpText>
    <label>Data Migration Conversion Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>