force-app/main/default/objects/Lead/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <description>Contains the Deal Name from HubSpot.</description>
    <inlineHelpText>Deal Name from HubSpot.</inlineHelpText>
    <label>Deal Name</label>
    <type>TextArea</type>
</CustomField>