force-app/main/default/objects/Lead/fields/dvm_id__c.field-meta.xml
<CustomField>
    <fullName>dvm_id__c</fullName>
    <label>DVM ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>