force-app/main/default/objects/Lead/fields/Hubspot_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_ID__c</fullName>
    <description>Hubspot ID for integrating the NA Hubspot Instance.</description>
    <externalId>true</externalId>
    <label>Hubspot ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>