force-app/main/default/objects/Lead/fields/key_account__c.field-meta.xml
<CustomField>
    <fullName>key_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>