force-app/main/default/objects/Lead/fields/Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interest__c</fullName>
    <description>Unrestricted picklist values for this picklist field</description>
    <label>Lead Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACESoft Business Manager</fullName>
            </value>
            <value>
                <fullName>Advantage+ Software</fullName>
            </value>
            <value>
                <fullName>AHMS</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>AlisVet</fullName>
            </value>
            <value>
                <fullName>AltaPoint Veterinary Software</fullName>
            </value>
            <value>
                <fullName>Animal Intelligence</fullName>
            </value>
            <value>
                <fullName>Animana</fullName>
            </value>
            <value>
                <fullName>Ardex</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>ATSystems</fullName>
            </value>
            <value>
                <fullName>AutoTrack</fullName>
            </value>
            <value>
                <fullName>AVImark Software</fullName>
            </value>
            <value>
                <fullName>Bastet Windows</fullName>
            </value>
            <value>
                <fullName>BeeFree</fullName>
            </value>
            <value>
                <fullName>Ciderhouse</fullName>
            </value>
            <value>
                <fullName>ClienTrax</fullName>
            </value>
            <value>
                <fullName>Client Recapture</fullName>
            </value>
            <value>
                <fullName>ClinicWare</fullName>
            </value>
            <value>
                <fullName>Complete Clinic Software</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Customer Logic</fullName>
            </value>
            <value>
                <fullName>Data Backup</fullName>
            </value>
            <value>
                <fullName>Dunlops - Vetsys</fullName>
            </value>
            <value>
                <fullName>DVMAX Practice</fullName>
            </value>
            <value>
                <fullName>EasyVet</fullName>
            </value>
            <value>
                <fullName>EazyVetPro</fullName>
            </value>
            <value>
                <fullName>ePetHealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>