force-app/main/default/objects/Lead/fields/lead_score__c.field-meta.xml
<CustomField>
    <fullName>lead_score__c</fullName>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>