force-app/main/default/objects/Lead/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>CCRM-2292</description>
    <label>Lead Source Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Sub_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Paid Facebook</fullName>
            </value>
            <value>
                <fullName>Paid LinkedIn</fullName>
            </value>
            <value>
                <fullName>Paid Twitter</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>