force-app/main/default/objects/Lead/fields/lead_source_detail__c.field-meta.xml
<CustomField>
    <fullName>lead_source_detail__c</fullName>
    <label>Lead Source Detail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>