force-app/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <description>CCRM-2292</description>
    <label>Lead Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Quarterly Call</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Training Call</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>CO APAC</fullName>
            </value>
            <value>
                <fullName>CO UK</fullName>
            </value>
            <value>
                <fullName>CO NA</fullName>
            </value>
            <value>
                <fullName>CCG AU</fullName>
            </value>
            <value>
                <fullName>VetQuip AU</fullName>
            </value>
            <value>
                <fullName>VI AU</fullName>
            </value>
            <value>
                <fullName>GSS APAC</fullName>
            </value>
            <value>
                <fullName>GSS EMEA</fullName>
            </value>
            <value>
                <fullName>GSS NA</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Field Rep Referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
            <value>
                <fullName>Corporate Account Manager</fullName>
            </value>
            <value>
                <fullName>Practice Support (PST)</fullName>
            </value>
            <value>
                <fullName>Pharmacy Transfer (PTP)</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>