force-app/main/default/objects/Lead/fields/Line_of_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business_Name__c</fullName>
    <label>Line of Business Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>