force-app/main/default/objects/Lead/fields/manufacturer__c.field-meta.xml
<CustomField>
    <fullName>manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Royal Canin</fullName>
            </value>
            <value>
                <fullName>Hills</fullName>
            </value>
            <value>
                <fullName>Bayer</fullName>
            </value>
            <value>
                <fullName>Luitpold</fullName>
            </value>
            <value>
                <fullName>Merck</fullName>
            </value>
            <value>
                <fullName>PetPlus</fullName>
            </value>
            <value>
                <fullName>Purina</fullName>
            </value>
            <value>
                <fullName>VetriScience</fullName>
            </value>
            <value>
                <fullName>Virbac</fullName>
            </value>
            <value>
                <fullName>Elanco</fullName>
            </value>
            <value>
                <fullName>Covetrus</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>