force-app/main/default/objects/Lead/fields/manufacturer_rep_email__c.field-meta.xml
<CustomField>
    <fullName>manufacturer_rep_email__c</fullName>
    <label>Manufacturer Rep Email</label>
    <type>Email</type>
</CustomField>