force-app/main/default/objects/Lead/fields/manufacturer_rep_first_name__c.field-meta.xml
<CustomField>
    <fullName>manufacturer_rep_first_name__c</fullName>
    <label>Manufacturer Rep First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>