force-app/main/default/objects/Lead/fields/manufacturer_rep_phone__c.field-meta.xml
<CustomField>
    <fullName>manufacturer_rep_phone__c</fullName>
    <label>Manufacturer Rep Phone</label>
    <type>Phone</type>
</CustomField>