force-app/main/default/objects/Lead/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <description>Field used to capture HubSpot Marketing Campaign name</description>
    <inlineHelpText>HubSpot Marketing Campaign</inlineHelpText>
    <label>Marketing Campaign</label>
    <type>TextArea</type>
</CustomField>