force-app/main/default/objects/Lead/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>