force-app/main/default/objects/Lead/fields/Number_of_Vets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vets__c</fullName>
    <label>Number of Vets</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>