force-app/main/default/objects/Lead/fields/point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>point_of_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Point of Contact</label>
    <type>Checkbox</type>
</CustomField>