force-app/main/default/objects/Lead/fields/practice_email__c.field-meta.xml
<CustomField>
    <fullName>practice_email__c</fullName>
    <label>Practice Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>