force-app/main/default/objects/Lead/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>CCRM-2124. Adding for GSS NA Sales Users</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practice Management Software</fullName>
            </value>
            <value>
                <fullName>Client Communications</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Data Backup</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>DragonFly</fullName>
            </value>
            <value>
                <fullName>Paper Products</fullName>
            </value>
            <value>
                <fullName>Licences</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Herd Health Management</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Modules</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>