force-app/main/default/objects/Lead/fields/reason_disqualified__c.field-meta.xml
<CustomField>
    <fullName>reason_disqualified__c</fullName>
    <label>Reason Disqualified</label>
    <type>TextArea</type>
</CustomField>