force-app/main/default/objects/Lead/fields/recent_conversion__c.field-meta.xml
<CustomField>
    <fullName>recent_conversion__c</fullName>
    <label>Recent Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>