force-app/main/default/objects/Lead/fields/X18_Char_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_Lead_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Char Lead ID</label>
    <type>Text</type>
</CustomField>