force-app/main/default/objects/Lead/recordTypes/APAC_EMEA.recordType-meta.xml
<RecordType>
    <fullName>APAC_EMEA</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>APAC/EMEA</label>
</RecordType>