force-app/main/default/objects/Lead/recordTypes/NA.recordType-meta.xml
<RecordType>
    <fullName>NA</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>NA</label>
</RecordType>