force-app/main/default/objects/Lead/listViews/GPM_NA_Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>GPM_NA_Unassigned_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>GPM NA Unassigned Leads</label>
    <queue>GPM_NA_Unassigned_Leads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>