force-app/main/default/objects/Lead/listViews/GSS_EMEA_Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>GSS_EMEA_Unassigned_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>GSS EMEA Unassigned Leads</label>
    <queue>GSS_EMEA_Unassigned_Leads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>