force-app/main/default/objects/Lead/listViews/GSS_NA_Marketing_Campaigns.listView-meta.xml
<ListView>
    <fullName>GSS_NA_Marketing_Campaigns</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Marketing_Campaign__c</columns>
    <columns>Lead_Interest__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Line_of_Business__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,Nurturing</value>
    </filters>
    <filters>
        <field>Marketing_Campaign__c</field>
        <operation>notEqual</operation>
        <value>NULL</value>
    </filters>
    <label>GSS NA Marketing Campaigns</label>
    <sharedTo>
        <group>GSS_NA_Marketing</group>
    </sharedTo>
</ListView>