force-app/main/default/objects/Lead/listViews/GSS_NA_Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>GSS_NA_Unassigned_Leads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>GSS NA Unassigned Leads</label>
    <queue>GSS_NA_Unassigned_Leads</queue>
    <sharedTo>
        <role>GSS_NA_Admin</role>
        <role>GSS_NA_Sales_Leader</role>
        <role>GSS_NA_Sales_Manager_Add_Ons</role>
        <role>GSS_NA_Sales_Manager_Software</role>
    </sharedTo>
</ListView>